// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Fleetdata / App Provided App 1`] = `
Array [
  <div
    className="sc-kgoBCf cFaVGf"
    id="content-wrapper"
  >
    <div
      className="sc-cHGsZl lmHbbS"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="sc-hmzhuo cFjKCa"
      >
        <div
          className="sc-TOsTZ eqvloj"
        >
          <div
            className="sc-kgAjT kmzIQb"
          >
            <img
              alt="BMW Group"
              className="sc-cJSrbW cMLsDY"
              height="35"
              src="/assets/svg/bmw-group.svg"
            />
            <img
              alt="BMW Logo"
              className="sc-cJSrbW cMLsDY"
              height="35"
              src="/assets/img/bmw_group_logos.png"
            />
          </div>
          <div
            className="sc-frDJqD fufUhH"
          >
            <div>
              <button
                className="active sc-eNQAEJ kUjIoI"
                onClick={[Function]}
              >
                EN
              </button>
              <button
                className="sc-eNQAEJ kUjIoI"
                onClick={[Function]}
              >
                DE
              </button>
            </div>
            <button
              className="MuiButtonBase-root-7 MuiIconButton-root-1 sc-gisBJw HOOIA sc-fMiknA iFBZZh"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiIconButton-label-6"
              >
                <svg
                  height="100%"
                  id="default"
                  style={
                    Object {
                      "fill": "#92a2bd",
                      "height": "24px",
                      "marginTop": undefined,
                      "minWidth": "24px",
                      "width": "24px",
                    }
                  }
                  version="1.1"
                  viewBox="0 6 96 96"
                  width="100%"
                >
                  <path
                    d="M48,42h.093A11.9981,11.9981,0,0,0,60,29.907,12.0548,12.0548,0,0,0,47.907,18,12,12,0,0,0,48,42ZM42.085,24.176A8.2476,8.2476,0,0,1,47.9214,21.7,8.3714,8.3714,0,0,1,56.3,29.9358,8.2984,8.2984,0,0,1,48.093,38.3H48a8.301,8.301,0,0,1-5.915-14.124Z"
                  />
                  <path
                    d="M66,50.1735a59.3969,59.3969,0,0,0-36-.1292c-1.3569.4271-2.6866.9142-4,1.4343V78h4V54.267a55.225,55.225,0,0,1,36,.1292V78h4V51.629C68.6882,51.0989,67.356,50.61,66,50.1735Z"
                  />
                   
                </svg>
              </span>
            </button>
          </div>
        </div>
        <ul
          className="sc-hMqMXs geyain"
        >
          <li
            className="sc-kEYyzF ZNagI"
          >
            <a
              aria-current={null}
              className="sc-kkGfuU jOfwbr"
              color="#92a2bd"
              href="/dashboard"
              onClick={[Function]}
            >
              <span>
                Dashboard
              </span>
            </a>
          </li>
          <li
            className="sc-kEYyzF ZNagI"
          >
            <a
              aria-current={null}
              className="sc-kkGfuU hVPECh"
              color="#ff9100"
              href="/service-view"
              onClick={[Function]}
            >
              <span>
                Fleet monitoring
              </span>
            </a>
          </li>
          <li
            className="sc-kEYyzF ZNagI"
          >
            <a
              aria-current={null}
              className="sc-kkGfuU ZkczR"
              color="#a2ad00"
              href="/car-park"
              onClick={[Function]}
            >
              <span>
                Car Park Management
              </span>
            </a>
          </li>
          )}
        </ul>
      </div>
      <div
        className="sc-ksYbfQ lCPkU"
      />
    </div>
    <div
      className="sc-kGXeez ezsGtn"
    >
      <main
        className="sc-cSHVUG btqosa"
      >
        <div
          className="MuiGrid-container-14 MuiGrid-spacing-xs-40-40"
        >
          <div
            className="MuiGrid-item-15 MuiGrid-grid-xs-12-54 MuiGrid-grid-md-3-73 MuiGrid-grid-lg-2-86"
          >
            <div
              className="sc-kpOJdX eMVMNs"
            >
              Your content goes here...
              <div
                className="sc-jqCOkK hrGQAV"
              />
              <button
                autoFocus={true}
                className="primary sc-jzJRlG brGhCA"
                icon={
                  <img
                    src="/assets/svg/chevron-right.svg"
                  />
                }
                label="Open Dialog"
                onClick={[Function]}
                primary="true"
                width="auto"
              >
                <span>
                  Open Dialog
                </span>
                <img
                  src="/assets/svg/chevron-right.svg"
                />
              </button>
              <div
                className="sc-jqCOkK hrGQAV"
              />
              <div
                className="sc-dNLxif PGUIr"
              >
                <div
                  className="MuiPaper-root-111 MuiPaper-elevation0-113 sc-hqyNC dOAmVs"
                >
                  <div
                    className="sc-jbKcbu bdomrr"
                  >
                    <div
                      className="nav-label"
                    >
                      Nav Button
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="sc-jqCOkK hrGQAV"
              />
              <button
                className="MuiButtonBase-root-7 MuiButton-root-138 MuiButton-text-140 MuiButton-outlined-146 sc-htpNat cujHkP"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiButton-label-139 label"
                >
                  <svg
                    height="100%"
                    id="default"
                    style={
                      Object {
                        "fill": "#92a2bd",
                        "height": "40px",
                        "marginTop": undefined,
                        "minWidth": "40px",
                        "width": "40px",
                      }
                    }
                    version="1.1"
                    viewBox="0 0 83.2 83.2"
                    width="100%"
                  >
                    <polygon
                      points="43.6,39.6 43.6,10.6 39.6,10.6 39.6,39.6 10.6,39.6 10.6,43.6 39.6,43.6 39.6,72.6 43.6,72.6  43.6,43.6 72.6,43.6 72.6,39.6"
                    />
                  </svg>
                  <span>
                    Add Manually
                  </span>
                </span>
              </button>
              <div
                className="sc-jqCOkK hrGQAV"
              />
              <div
                className="MuiFormControl-root-176 sc-cvbbAY hwPHSZ"
              >
                <div
                  className="MuiInputBase-root-200 MuiInput-root-187 MuiInputBase-formControl-201 MuiInput-formControl-188 sc-gipzik hrrmOw"
                  onClick={[Function]}
                >
                  <div
                    className="MuiSelect-root-180 root"
                  >
                    <div
                      aria-haspopup="true"
                      aria-owns={null}
                      aria-pressed="false"
                      className="MuiSelect-select-181 select MuiSelect-selectMenu-184 MuiInputBase-input-210 MuiInput-input-195"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <div
                        className="MuiListItemText-root-217"
                      >
                        <span
                          className="MuiTypography-root-223 MuiTypography-subtitle1-241 MuiListItemText-primary-220"
                        >
                          All fleet vehicles
                        </span>
                      </div>
                    </div>
                    <input
                      id="fleet-select"
                      name="fleet-select"
                      type="hidden"
                      value="ALL_FLEETS"
                    />
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-258 MuiSelect-icon-186 icon"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                className="sc-jqCOkK hrGQAV"
              />
              <div
                className="MuiFormControl-root-176 sc-cvbbAY hwPHSZ"
              >
                <div
                  className="MuiInputBase-root-200 MuiInput-root-187 MuiInputBase-formControl-201 MuiInput-formControl-188 sc-fBuWsC kQnnxH sc-gipzik hrrmOw"
                  onClick={[Function]}
                >
                  <div
                    className="MuiSelect-root-180 root"
                  >
                    <div
                      aria-haspopup="true"
                      aria-owns={null}
                      aria-pressed="false"
                      className="MuiSelect-select-181 select MuiSelect-selectMenu-184 MuiInputBase-input-210 MuiInput-input-195"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <div
                        className="MuiListItemText-root-217"
                      >
                        <span
                          className="MuiTypography-root-223 MuiTypography-subtitle1-241 MuiListItemText-primary-220"
                        >
                          All fleet vehicles
                        </span>
                      </div>
                    </div>
                    <input
                      id="fleet-select"
                      name="fleet-select"
                      type="hidden"
                      value="ALL_FLEETS"
                    />
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-258 MuiSelect-icon-186 icon"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>,
  <footer
    className="sc-jKJlTe eyMvcP"
  >
    <div
      className="sc-dxgOiQ cSKmXI sc-kGXeez ezsGtn"
    >
      <div>
        <a
          className="sc-ckVGcZ itqOKt"
          href="/imprint"
          onClick={[Function]}
        >
          Imprint
        </a>
      </div>
      <div>
        <a
          className="sc-ckVGcZ itqOKt"
          href="/privacy"
          onClick={[Function]}
        >
          Data Protection
        </a>
      </div>
      <div>
        <a
          className="sc-ckVGcZ itqOKt"
          href="/cookies"
          onClick={[Function]}
        >
          Cookies
        </a>
      </div>
      <div>
        <a
          className="sc-ckVGcZ itqOKt"
          href="/t-and-c"
          onClick={[Function]}
        >
          T&C
        </a>
      </div>
      <div
        style={
          Object {
            "marginLeft": "auto",
          }
        }
      >
        © Copyright 2018 BMW Group
      </div>
    </div>
  </footer>,
]
`;

exports[`Storyshots Fleetdata / Components Left Icon Button 1`] = `
<div
  className="sc-bbmXgH dVcTmh"
>
  <button
    className="primary sc-jzJRlG lbarbb"
    iconleft={
      <_default
        color="white"
      />
    }
    label="LeftIcon Button"
    primary="true"
  >
    <svg
      height="100%"
      id="default"
      style={
        Object {
          "fill": "white",
          "height": "96px",
          "marginTop": undefined,
          "minWidth": "undefinedpx",
          "width": "96px",
        }
      }
      version="1.1"
      viewBox="0 0 62 84"
      width="100%"
    >
      <g>
        <path
          d="M71,33H68V27a21,21,0,0,0-42,0v6H16V90H78V33ZM30,27a17,17,0,0,1,34,0v6H30ZM74,86H20V37H74Z"
          transform="translate(-16 -6)"
        />
        <path
          d="M53,56.16a6,6,0,1,0-7.86,5.74L41.72,75H52.28L48.83,61.9A6,6,0,0,0,53,56.16Z"
          transform="translate(-16 -6)"
        />
      </g>
    </svg>
    <span>
      LeftIcon Button
    </span>
  </button>
</div>
`;

exports[`Storyshots Fleetdata / Components Primary Button 1`] = `
<div
  className="sc-bbmXgH dVcTmh"
>
  <button
    className="primary sc-jzJRlG lbarbb"
    label="Prop: 'label'"
    primary="true"
  >
    <span>
      Prop: 'label'
    </span>
  </button>
</div>
`;

exports[`Storyshots Fleetdata / Components Right Icon Button 1`] = `
<div
  className="sc-bbmXgH dVcTmh"
>
  <button
    className="primary sc-jzJRlG lbarbb"
    icon={
      <img
        src="/assets/svg/chevron-right.svg"
      />
    }
    label="RightIcon Button"
    primary="true"
  >
    <span>
      RightIcon Button
    </span>
    <img
      src="/assets/svg/chevron-right.svg"
    />
  </button>
</div>
`;

exports[`Storyshots Fleetdata / Components Secondary Button 1`] = `
<div
  className="sc-bbmXgH dVcTmh"
>
  <button
    className="sc-jzJRlG lbarbb"
    label="Secondary Button"
  >
    <span>
      Secondary Button
    </span>
  </button>
</div>
`;

exports[`Storyshots General Components Central Loading Indicator 1`] = `
<div
  className="sc-uJMKN eVXOtU"
  size="80"
>
  <div
    className="MuiCircularProgress-root-55 MuiCircularProgress-colorPrimary-58 MuiCircularProgress-indeterminate-57"
    role="progressbar"
    style={
      Object {
        "height": 80,
        "width": 80,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg-60"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle-61 MuiCircularProgress-circleIndeterminate-63"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots General Components Complex Error Message 1`] = `
<div
  aria-describedby="client-snackbar"
  className="MuiTypography-root-204 MuiTypography-body2-212 MuiPaper-root-177 MuiPaper-elevation6-185 MuiSnackbarContent-root-174"
  role="alertdialog"
  style={
    Object {
      "backgroundColor": "#d32f2f",
    }
  }
>
  <div
    className="MuiSnackbarContent-message-175"
  >
    <span
      id="client-snackbar"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-239"
        focusable="false"
        role="presentation"
        style={
          Object {
            "fontSize": 20,
            "marginRight": 8,
            "opacity": 0.9,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
        />
      </svg>
      <span>
        This is an error message with a 
        <strong>
          react node
        </strong>
         as message!  
      </span>
      <div
        className="MuiCircularProgress-root-165 MuiCircularProgress-indeterminate-167"
        role="progressbar"
        style={
          Object {
            "height": 20,
            "width": 20,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg-170"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle-171 MuiCircularProgress-circleIndeterminate-173"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
      <span>
          🔥 🔥 
      </span>
    </span>
  </div>
  <div
    className="MuiSnackbarContent-action-176"
  >
    <button
      aria-label="Close"
      className="MuiButtonBase-root-254 MuiIconButton-root-248 MuiIconButton-colorInherit-249"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-253"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-239"
          focusable="false"
          role="presentation"
          style={
            Object {
              "fontSize": 20,
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots General Components Large Loading Indicator 1`] = `
<div
  className="MuiCircularProgress-root-46 MuiCircularProgress-colorPrimary-49 MuiCircularProgress-indeterminate-48"
  role="progressbar"
  style={
    Object {
      "height": 80,
      "width": 80,
    }
  }
>
  <svg
    className="MuiCircularProgress-svg-51"
    viewBox="22 22 44 44"
  >
    <circle
      className="MuiCircularProgress-circle-52 MuiCircularProgress-circleIndeterminate-54"
      cx={44}
      cy={44}
      fill="none"
      r={20.2}
      strokeWidth={3.6}
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots General Components Next Button 1`] = `
<button
  className="primary sc-jzJRlG lbarbb"
  icon={
    <img
      src="/assets/svg/chevron-right.svg"
    />
  }
  label="Next"
  onClick={[Function]}
  primary="true"
>
  <span>
    Next
  </span>
  <img
    src="/assets/svg/chevron-right.svg"
  />
</button>
`;

exports[`Storyshots General Components Simple Error Message 1`] = `
<div
  aria-describedby="client-snackbar"
  className="MuiTypography-root-112 MuiTypography-body2-120 MuiPaper-root-85 MuiPaper-elevation6-93 MuiSnackbarContent-root-82"
  role="alertdialog"
  style={
    Object {
      "backgroundColor": "#d32f2f",
    }
  }
>
  <div
    className="MuiSnackbarContent-message-83"
  >
    <span
      id="client-snackbar"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-147"
        focusable="false"
        role="presentation"
        style={
          Object {
            "fontSize": 20,
            "marginRight": 8,
            "opacity": 0.9,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
        />
      </svg>
      This is an error message with a string message
    </span>
  </div>
  <div
    className="MuiSnackbarContent-action-84"
  >
    <button
      aria-label="Close"
      className="MuiButtonBase-root-162 MuiIconButton-root-156 MuiIconButton-colorInherit-157"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-161"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-147"
          focusable="false"
          role="presentation"
          style={
            Object {
              "fontSize": 20,
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots General Components Small Loading Indicator 1`] = `
<div
  className="MuiCircularProgress-root-37 MuiCircularProgress-colorPrimary-40 MuiCircularProgress-indeterminate-39"
  role="progressbar"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
>
  <svg
    className="MuiCircularProgress-svg-42"
    viewBox="22 22 44 44"
  >
    <circle
      className="MuiCircularProgress-circle-43 MuiCircularProgress-circleIndeterminate-45"
      cx={44}
      cy={44}
      fill="none"
      r={20.2}
      strokeWidth={3.6}
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Rule Creation / General Components Close Procedure 1`] = `
<div
  className="sc-bbmXgH dVcTmh"
>
  <div
    className="sc-feJyhm kDPYsH sc-gGBfsJ gKsVSL"
  >
    <div
      className="MuiPaper-root-734 MuiPaper-elevation0-736 sc-feJyhm kDPYsH sc-hqyNC dOAmVs"
      onClick={[Function]}
    >
      <div
        className="sc-jnlKLf ghqNHh sc-jbKcbu bdomrr"
      >
        <div
          className="nav-label sc-fYxtnH dwaVQg"
        >
          <svg
            height="100%"
            id="default"
            style={
              Object {
                "fill": "#92a2bd",
                "height": "96px",
                "marginTop": undefined,
                "minWidth": "undefinedpx",
                "width": "96px",
              }
            }
            version="1.1"
            viewBox="0 0 49 49"
            width="100%"
          >
            <polygon
              points="40,11.213 37.787,9 24.5,22.287 11.213,9 9,11.213 22.287,24.5 9,37.787 11.213,40 24.5,26.713 
37.787,40 40,37.787 26.713,24.5 "
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Rule Creation / General Components Single Step 1`] = `
<div
  className="sc-bbmXgH dVcTmh"
>
  <div
    className="MuiStep-root-545"
  >
    <button
      className="MuiButtonBase-root-554 MuiStepButton-root-550"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiStepLabel-root-557 MuiStepLabel-horizontal-558"
      >
        <span
          className="MuiStepLabel-labelContainer-567"
        >
          <span
            className="MuiTypography-root-568 MuiTypography-body2-576 MuiStepLabel-label-560 MuiStepLabel-active-561"
          >
            General
          </span>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Rule Creation / General Components Stepper 1`] = `
<div
  className="sc-bbmXgH dVcTmh"
>
  <div
    className="MuiPaper-root-616 MuiPaper-elevation0-618 MuiStepper-root-612 MuiStepper-horizontal-613"
    style={
      Object {
        "width": "90%",
      }
    }
  >
    <div
      className="MuiStep-root-643 MuiStep-horizontal-644"
    >
      <button
        className="MuiButtonBase-root-652 MuiStepButton-root-648 MuiStepButton-horizontal-649"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiStepLabel-root-655 MuiStepLabel-horizontal-656"
        >
          <span
            className="MuiStepLabel-iconContainer-663"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-671 MuiStepIcon-root-666"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <circle
                cx="12"
                cy="12"
                r="12"
              />
              <text
                className="MuiStepIcon-text-667"
                textAnchor="middle"
                x="12"
                y="16"
              >
                1
              </text>
            </svg>
          </span>
          <span
            className="MuiStepLabel-labelContainer-665"
          >
            <span
              className="MuiTypography-root-680 MuiTypography-body2-688 MuiStepLabel-label-658"
            >
              General
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      className="MuiStepConnector-root-715 MuiStepConnector-horizontal-716 MuiStepConnector-active-719"
    >
      <span
        className="MuiStepConnector-line-722 MuiStepConnector-lineHorizontal-723"
      />
    </div>
    <div
      className="MuiStep-root-643 MuiStep-horizontal-644"
    >
      <button
        className="MuiButtonBase-root-652 MuiStepButton-root-648 MuiStepButton-horizontal-649"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiStepLabel-root-655 MuiStepLabel-horizontal-656"
        >
          <span
            className="MuiStepLabel-iconContainer-663"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-671 MuiStepIcon-root-666 MuiStepIcon-active-668"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <circle
                cx="12"
                cy="12"
                r="12"
              />
              <text
                className="MuiStepIcon-text-667"
                textAnchor="middle"
                x="12"
                y="16"
              >
                2
              </text>
            </svg>
          </span>
          <span
            className="MuiStepLabel-labelContainer-665"
          >
            <span
              className="MuiTypography-root-680 MuiTypography-body2-688 MuiStepLabel-label-658 MuiStepLabel-active-659"
            >
              Fleets
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      className="MuiStepConnector-root-715 MuiStepConnector-horizontal-716 MuiStepConnector-disabled-721"
    >
      <span
        className="MuiStepConnector-line-722 MuiStepConnector-lineHorizontal-723"
      />
    </div>
    <div
      className="MuiStep-root-643 MuiStep-horizontal-644"
    >
      <button
        className="MuiButtonBase-root-652 MuiButtonBase-disabled-653 MuiStepButton-root-648 MuiStepButton-horizontal-649"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiStepLabel-root-655 MuiStepLabel-horizontal-656 MuiStepLabel-disabled-662"
        >
          <span
            className="MuiStepLabel-iconContainer-663"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-671 MuiStepIcon-root-666"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <circle
                cx="12"
                cy="12"
                r="12"
              />
              <text
                className="MuiStepIcon-text-667"
                textAnchor="middle"
                x="12"
                y="16"
              >
                3
              </text>
            </svg>
          </span>
          <span
            className="MuiStepLabel-labelContainer-665"
          >
            <span
              className="MuiTypography-root-680 MuiTypography-body2-688 MuiStepLabel-label-658"
            >
              Condition
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Rule Creation / Second Step Fleet Selector 1`] = `
<div
  className="sc-bbmXgH dVcTmh"
>
  <div
    className="css-10nd86i"
    onKeyDown={[Function]}
  >
    <div
      className="css-1ykgphr"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="css-1hwfws3"
      >
        <div
          className="css-xwjg1b"
        >
          <div
            className="css-rf4tka"
          >
            BMW
          </div>
          <div
            className="css-1alnv5e"
            onClick={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={14}
              viewBox="0 0 20 20"
              width={14}
            >
              <path
                d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
              />
            </svg>
          </div>
        </div>
        <div
          className="css-1k1ozsg"
        >
          <div
            className=""
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-2-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-1wy0on6"
      >
        <div
          aria-hidden="true"
          className="css-1ep9fjw"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-19bqh2r"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
            />
          </svg>
        </div>
        <span
          className="css-d8oujb"
        />
        <div
          aria-hidden="true"
          className="css-1ep9fjw"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-19bqh2r"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Rule Creation / Third Step Condition Selector 1`] = `
<div
  className="sc-bbmXgH dVcTmh"
>
  <p>
    The
    <select>
      <option>
         
        Battery
         
      </option>
      <option>
         
        Contract
         
      </option>
      <option>
         
        Engine
         
      </option>
      <option>
         
        Service
         
      </option>
      <option>
         
        Fuel
         
      </option>
      <option>
         
        Mileage
         
      </option>
    </select>
    is
    <select>
      <option>
         
        Above
         
      </option>
      <option>
         
        Below
         
      </option>
      <option>
         
        Equal to
         
      </option>
      <option>
         
        Unequal to
         
      </option>
    </select>
    <input
      name="value"
      type="text"
    />
    %.
  </p>
</div>
`;

exports[`Storyshots Rule Creation / Third Step Predicate Counter 1`] = `
<div
  className="sc-bbmXgH dVcTmh"
>
  <p>
    If
    <select>
      <option>
         
        All
         
      </option>
      <option>
         
        Any
         
      </option>
      <option>
         
        None
         
      </option>
    </select>
    of the following conditions are met:
  </p>
</div>
`;

exports[`Storyshots Rule Overview / Complete Fetching 1`] = `
<div
  className="sc-uJMKN eVXOtU"
  size="80"
>
  <div
    className="MuiCircularProgress-root-435 MuiCircularProgress-colorPrimary-438 MuiCircularProgress-indeterminate-437"
    role="progressbar"
    style={
      Object {
        "height": 80,
        "width": 80,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg-440"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle-441 MuiCircularProgress-circleIndeterminate-443"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Rule Overview / Complete Successful 1`] = `
<div
  className="sc-kafWEX iWBJQd"
>
  <div
    className="sc-tilXH bJLPWy sc-gGBfsJ kPSuHc"
  >
    <div
      className="MuiPaper-root-373 MuiPaper-elevation0-375 sc-tilXH bJLPWy sc-hqyNC dOAmVs"
      onClick={[Function]}
    >
      <div
        className="sc-jnlKLf ghqNHh sc-jbKcbu bdomrr"
      >
        <div
          className="nav-label sc-fYxtnH dwaVQg"
        >
          <svg
            height="100%"
            id="default"
            style={
              Object {
                "fill": "#92a2bd",
                "height": "96px",
                "marginTop": undefined,
                "minWidth": "undefinedpx",
                "width": "96px",
              }
            }
            version="1.1"
            viewBox="0 0 83.2 83.2"
            width="100%"
          >
            <polygon
              points="43.6,39.6 43.6,10.6 39.6,10.6 39.6,39.6 10.6,39.6 10.6,43.6 39.6,43.6 39.6,72.6 43.6,72.6  43.6,43.6 72.6,43.6 72.6,39.6"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-ktHwxA bEXIEy sc-gGBfsJ kPSuHc"
  >
    <div
      className="MuiPaper-root-373 MuiPaper-elevation0-375 sc-ktHwxA bEXIEy sc-hqyNC dOAmVs"
      onClick={[Function]}
    >
      <div
        className="sc-jnlKLf ghqNHh sc-jbKcbu bdomrr"
      >
        <div
          className="nav-label sc-fYxtnH dwaVQg"
        >
          <h6
            className="MuiTypography-root-400 MuiTypography-h6-417"
          >
            Rule Name
          </h6>
          <hr
            className="sc-cIShpX gcJlWc"
          />
          <h6
            className="MuiTypography-root-400 MuiTypography-subtitle1-418"
          >
            Sent every Tuesday, 9:00 AM
          </h6>
          <hr
            className="sc-cIShpX gcJlWc"
          />
          <div
            className="sc-hEsumM dpAakk"
          >
            <img
              src="/assets/img/Engine.png"
              style={
                Object {
                  "height": "20px",
                  "width": "20px",
                }
              }
            />
          </div>
          <div
            className="sc-hEsumM dpAakk"
          >
            <img
              src="/assets/img/Battery.png"
              style={
                Object {
                  "height": "20px",
                  "width": "20px",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-ktHwxA bEXIEy sc-gGBfsJ kPSuHc"
  >
    <div
      className="MuiPaper-root-373 MuiPaper-elevation0-375 sc-ktHwxA bEXIEy sc-hqyNC dOAmVs"
      onClick={[Function]}
    >
      <div
        className="sc-jnlKLf ghqNHh sc-jbKcbu bdomrr"
      >
        <div
          className="nav-label sc-fYxtnH dwaVQg"
        >
          <h6
            className="MuiTypography-root-400 MuiTypography-h6-417"
          >
            Rule Name 2
          </h6>
          <hr
            className="sc-cIShpX gcJlWc"
          />
          <h6
            className="MuiTypography-root-400 MuiTypography-subtitle1-418"
          >
            Sent every Tuesday, 9:00 AM
          </h6>
          <hr
            className="sc-cIShpX gcJlWc"
          />
          <div
            className="sc-hEsumM dpAakk"
          >
            <img
              src="/assets/img/Engine.png"
              style={
                Object {
                  "height": "20px",
                  "width": "20px",
                }
              }
            />
          </div>
          <div
            className="sc-hEsumM dpAakk"
          >
            <img
              src="/assets/img/Battery.png"
              style={
                Object {
                  "height": "20px",
                  "width": "20px",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Rule Overview / Complete With Error 1`] = `
<div
  className="sc-kafWEX iWBJQd"
>
  <div
    aria-describedby="client-snackbar"
    className="MuiTypography-root-483 MuiTypography-body2-491 MuiPaper-root-456 MuiPaper-elevation6-464 MuiSnackbarContent-root-453"
    role="alertdialog"
    style={
      Object {
        "backgroundColor": "#d32f2f",
      }
    }
  >
    <div
      className="MuiSnackbarContent-message-454"
    >
      <span
        id="client-snackbar"
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-518"
          focusable="false"
          role="presentation"
          style={
            Object {
              "fontSize": 20,
              "marginRight": 8,
              "opacity": 0.9,
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
        There was a problem loading this data from the server. Please try again later.
      </span>
    </div>
    <div
      className="MuiSnackbarContent-action-455"
    >
      <button
        aria-label="Close"
        className="MuiButtonBase-root-533 MuiIconButton-root-527 MuiIconButton-colorInherit-528"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-532"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-518"
            focusable="false"
            role="presentation"
            style={
              Object {
                "fontSize": 20,
              }
            }
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Rule Overview / Tiles Add Rule Tile 1`] = `
<div
  className="sc-bbmXgH dVcTmh"
>
  <div
    className="sc-tilXH bJLPWy sc-gGBfsJ gKsVSL"
  >
    <div
      className="MuiPaper-root-266 MuiPaper-elevation0-268 sc-tilXH bJLPWy sc-hqyNC dOAmVs"
      onClick={[Function]}
    >
      <div
        className="sc-jnlKLf ghqNHh sc-jbKcbu bdomrr"
      >
        <div
          className="nav-label sc-fYxtnH dwaVQg"
        >
          <svg
            height="100%"
            id="default"
            style={
              Object {
                "fill": "#92a2bd",
                "height": "96px",
                "marginTop": undefined,
                "minWidth": "undefinedpx",
                "width": "96px",
              }
            }
            version="1.1"
            viewBox="0 0 83.2 83.2"
            width="100%"
          >
            <polygon
              points="43.6,39.6 43.6,10.6 39.6,10.6 39.6,39.6 10.6,39.6 10.6,43.6 39.6,43.6 39.6,72.6 43.6,72.6  43.6,43.6 72.6,43.6 72.6,39.6"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Rule Overview / Tiles Rule Tile 1`] = `
<div
  className="sc-bbmXgH dVcTmh"
>
  <div
    className="sc-ktHwxA bEXIEy sc-gGBfsJ gKsVSL"
  >
    <div
      className="MuiPaper-root-302 MuiPaper-elevation0-304 sc-ktHwxA bEXIEy sc-hqyNC dOAmVs"
    >
      <div
        className="sc-jnlKLf ghqNHh sc-jbKcbu bdomrr"
      >
        <div
          className="nav-label sc-fYxtnH dwaVQg"
        >
          <h6
            className="MuiTypography-root-329 MuiTypography-h6-346"
          >
            Rule Name
          </h6>
          <hr
            className="sc-cIShpX gcJlWc"
          />
          <h6
            className="MuiTypography-root-329 MuiTypography-subtitle1-347"
          >
            Sent every Tuesday, 9:00 AM
          </h6>
          <hr
            className="sc-cIShpX gcJlWc"
          />
          <div
            className="sc-hEsumM dpAakk"
          >
            <img
              src="/assets/img/Engine.png"
              style={
                Object {
                  "height": "20px",
                  "width": "20px",
                }
              }
            />
          </div>
          <div
            className="sc-hEsumM dpAakk"
          >
            <img
              src="/assets/img/Battery.png"
              style={
                Object {
                  "height": "20px",
                  "width": "20px",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Welcome to this Storybook 1`] = `
<section
  className="sc-bdVaJa ktFUja"
>
  <h2>
    Welcome to the BMW CNS Storybook!
  </h2>
  <p>
    This view is used to showcase some of the components, separated from their surroundings and any logic.
  </p>
  <p>
    The goal is to conciously design every possible state (active, inactive, loading, error, etc.), 
    <br />
    while at the same time separating logic from looks.
  </p>
  <p>
    Please select a component from the sidebar on the left. Note that the components listed under 
    <strong>
      Fleetdata
    </strong>
     
    <br />
     are part of the package provided by MbW, and are not created or modified by the CNS team.
  </p>
</section>
`;
